Implement basic integration with TVMaze API